--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
-    "name": "RamalPortfolio",
-    "description": "Neil John's Web Portfolio",
-    "version": "0.0.1",
-    "private": true
+  "name": "RamalPortfolio",
+  "description": "Neil John's Web Portfolio",
+  "version": "0.0.1",
+  "private": true,
+  "devDependencies": {
+    "del": "^0.1.3",
+    "gulp": "^3.8.10",
+    "gulp-browserify": "^0.5.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-connect": "^2.2.0",
+    "gulp-jshint": "^1.9.0",
+    "gulp-preprocess": "^1.1.1",
+    "gulp-stylus": "^1.3.4",
+    "gulp-util": "^3.0.1",
+    "nib": "^1.0.4",
+    "run-sequence": "^1.0.1"
+  }
 }
